# 3dde

./: .gitignore  QUICKSTART.md  README.md  aufabenliste.md  check_status.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  visualize_results.py
docs/: API.md  QUICKSTART.md  STATUS.md  aufabenliste.md
docs/api/: README.md
experiments/: README.md  config.py  train_with_config.py
experiments/benchmarks/: benchmark.py  benchmark_sampling.py  comparison_benchmark.py  scalability_benchmark.py
experiments/configs/: default.yaml  fast.yaml  high_quality.yaml  overnight.yaml
experiments/examples/: demo_molecular.py  evaluate_quality.py  generate.py  train_example.py
experiments/notebooks/: visualizations.py
outputs/: generated_samples.xyz
reports/: BENCHMARK_RESULTS.md  BERICHT_TRAININGSABBRUCH.md  DATENANALYSE_TAKTILE_DATENSAETZE.md  DEPLOYMENT.md  ENGINEERING_REPORT.md  EVALUATION_RESULTS.md  FEHLERBERICHT.md  FEHLERBERICHT_V2.md  FINAL_SUMMARY.md  KAN_DATA_CLEANING.md  MOLECULAR_LOGIC.md  PROJECT_COMPLETE.md  SAMPLING_BENCHMARK.md  SUCCESS_SUMMARY.md  formulas.md  struktur_report.md
scripts/: check_status.sh  run_overnight.sh  run_tests.sh  run_tests_detailed.sh
src/: __init__.py
src/core/: __init__.py  advanced_sampling.py  forward.py  precompute.py  sampling.py  utils.py
src/data/: __init__.py  dataset.py  graph_builder.py
src/evaluation/: metrics.py
src/models/: __init__.py  eps_net.py  gnn_layers.py
src/tests/: __init__.py  conftest.py  test_forward.py  test_integration.py  test_models.py  test_precompute.py  test_sampling.py  (+1 more)
(+4 files in other folders)
